add some path
