# src/go-server-server-generated/go/routers.go
@@ -3,7 +3,7 @@
  *
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * API version: 0.0.2
+ * API version: 0.0.3
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
@@ -57,35 +57,42 @@ var routes = Routes{
 	Route{
 		"GetArtical",
 		strings.ToUpper("Get"),
-		"/atricle",
+		"/users/{user}/articles",
 		GetArtical,
 	},
 
 	Route{
 		"SendArtical",
 		strings.ToUpper("Post"),
-		"/atricle",
+		"/users/{user}/articles",
 		SendArtical,
 	},
 
 	Route{
-		"GetUser",
+		"UsersUserGet",
 		strings.ToUpper("Get"),
-		"/user",
-		GetUser,
+		"/users/{user}",
+		UsersUserGet,
+	},
+
+	Route{
+		"GetUsers",
+		strings.ToUpper("Get"),
+		"/users",
+		GetUsers,
 	},
 
 	Route{
 		"UserLogin",
 		strings.ToUpper("Post"),
-		"/user/Login",
+		"/users/login",
 		UserLogin,
 	},
 
 	Route{
 		"UserLogout",
 		strings.ToUpper("Get"),
-		"/user/Logout",
+		"/users/logout",
 		UserLogout,
 	},
 }
